# swagger.yaml
@@ -25,15 +25,56 @@ paths:
         400:
           description: "Invalid input"
     get:
-      summary: "Views users webpage"
-      operationId: "viewUsers"
+      summary: "Get all users"
+      operationId: "getUsers"
       responses:
-        201:
-          description: "Webpage loaded"
+        200:
+          description: "List of users"
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/User"
+  /sessions:
+    get:
+      summary: Check if user is logged in
+      description: Returns a redirect to home page if user is logged in, otherwise renders the login page
+      responses:
+        '200':
+          description: Redirect to home page if user is logged in
+        'default':
+          description: Renders the login page
+    post:
+      summary: User login
+      description: Logs in a user with the given username and password
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+              example:
+                username: "exampleUser"
+                password: "password123"
+      responses:
+        '302':
+          description: Redirect to home page on successful login
+        'default':
+          description: Renders the login page with an error message if login fails
+  /end-session:
+    get:
+      summary: End user session
+      description: Destroys the user session and redirects to the home page
+      responses:
+        '302':
+          description: Redirect to home page after ending session
+
 components:
   schemas:
     User:
@@ -42,12 +83,11 @@ components:
         id:
           type: "integer"
           format: "int64"
+          example: 1
         username:
           type: "string"
+          example: "exampleUser"
         password:
           type: "string"
           description: "The user's password encrypted using bcrypt"
-      example:
-        id: 1
-        username: "exampleUser"
-        password: "$2a$10$N9qo8uLOickgx2ZMRZoMyeIjZAgcfl7p92ldb61W1/5l0Gldjb62y" # bcrypt encrypted password
+          example: "$2a$10$N9qo8uLOickgx2ZMRZoMyeIjZAgcfl7p92ldb61W1/5l0Gldjb62y" # bcrypt encrypted password
